--- a/index.html
+++ b/index.html
@@ -1,193 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&family=Ubuntu:ital@0;1&display=swap"
         rel="stylesheet">
 </head>
-<style>
-    body {
-        margin: 0;
-        padding: 0;
-        background: url('images/slider.jpg');
-        background-repeat: no-repeat;
-
-        color: white;
-        font-family: 'Baloo Bhai 2', cursive;
-        font-size: 15px;
-
-    }
-
-    .top-header {
-        height: 100px;
-        width: auto;
-        margin: 0px;
-
-    }
-
-    .left {
-        display: inline-block;
-        height: 40px;
-        width: 10%;
-        position: absolute;
-        margin: 0 auto 10px auto;
-
-
-    }
-
-    .right {
-        position: absolute;
-        right: 200px;
-        height: 60px;
-        width: 50%;
-        margin: 20px 0 0 0;
-    }
-
-    .div2 {
-        display: block;
-        width: 50px;
-        margin: 0px auto;
-        height: 84px;
-        width: 90%;
-    }
-
-    ul a {
-        text-decoration: none;
-        padding: 15px;
-        margin-top: 10px;
-        color: white;
-
-    }
-
-    a:hover {
-        color: yellow;
-    }
-
-    ul li {
-        list-style-type: none;
-        display: inline-block;
-        padding: 15px;
-        margin: auto;
-    }
-
-    ul {
-        display: inline-block;
-        margin-top: 5px;
-        position: absolute;
-        width: 100%;
-        right: 0.5%;
-
-    }
-
-    .logo {
-        margin-top: 80px;
-        width: 107px;
-        margin-left: -3px;
-    }
-
-    img {
-        position: absolute;
-        left: 20px;
-        width: 50px;
-        height: 50px;
-        top: 24px;
-        filter: invert(100%);
-
-    }
-
-    .content {
-
-        width: auto;
-        height: 100px;
-    }
-
-    .heading h1 {
-        text-align: center;
-        font-size: 70px;
-        font-weight: bold;
-        margin-top: 120px;
-        margin-bottom: 0px;
-
-    }
-
-    .heading p {
-        margin-bottom: 500px;
-        text-align: center;
-        margin-top: 0px;
-
-    }
-
-    .heading h1 span {
-        color: #f1d214;
-    }
-    .button {
-        height: 50px;
-        width: 600px;
-        position: absolute;
-        left: 328px;
-
-        top: 450px;
-    }
-
-    button {
-        width: auto;
-        height: 55px;
-        /* line-height: 63px; */
-        /* background: #f1d204; */
-        margin: 0 15px;
-        border: none;
-        padding: 0 70px;
-        display: inline-block;
-        border-radius: 3px;
-        font-weight: 700;
-        font-size: 16px;
-        /* color: #fff; */
-        font-family: lato;
-        color: white;
-        background-color: transparent;
-        text-align: center;
-    }
-
-    .learn-more {
-        text-align: center;
-        margin: auto;
-        font-family: 'Baloo Bhai 2', cursive;
-        border: 2px solid white;
-        background-color: rgba(106, 103, 103, 0.267);
-
-    }
-
-    .learn-more:hover {
-        background-color: transparent;
-
-    }
-
-    .download {
-        background-color: #f1d214;
-        font-family: 'Baloo Bhai 2', cursive;
-
-    }
-
-    .download:hover {
-        background-color: rgb(211, 51, 211);
-
-    }
-</style>
-
 <body>
     <header>
         <div class="top-header">
-            <div class="div2">
+            <div class="jami">
                 <div class="left">
                     <a href="/index.html"> <img src="images/logo.png" alt="logo"></a>
                     <p class="logo">JJ Fitness Zone</p>
-
                 </div>
                 <div class="right">
                     <nav>
@@ -215,7 +45,6 @@
         </div>
     </header>
 
-
+    
 </body>
-
 </html>
