remove some errors and modifying files

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +15,7 @@
 <body>
     <header>
         <div class="top-header">
-            <div class="jami">
+            <div class="head">
                 <div class="left">
                     <a href="/index.html"> <img src="images/logo.png" alt="logo"></a>
                     <p class="logo">JJ Fitness Zone</p>
@@ -45,6 +46,8 @@
         </div>
     </header>
 
-    
+
+
 </body>
+
 </html>
